crates/rome_js_formatter/tests/specs/prettier/js/no-semi-babylon-extensions/no-semi.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
a
;::b.c

class A {
  a = b;
  in
  c

  a = b;
  instanceof(){}
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,5 +1,5 @@
 a;
-::b.c;
+::b.c
 
 class A {
   a = b;
```

# Output

```js
a;
::b.c

class A {
  a = b;
  in;
  c;

  a = b;
  instanceof() {}
}
```


# Errors
```
error[SyntaxError]: expected a statement but instead found '::b.c'
  ┌─ no-semi.js:2:2
  │
2 │ ;::b.c
  │  ^^^^^ Expected a statement here


```


